--- a/system/view/index.xhtml
+++ b/system/view/index.xhtml
@@ -1,9 +1,10 @@
 <tal:block>
-   <header><h1>Markdown For Content</h1></header>
    <nav class="aysites">
       <a id="popping" href="http://aysites.com/">
          <img width="90" height="55" src="http://aysites.com/media/logo-small.png" alt="AySites Logo" />
          <span>Sponsored by AySites.com</span>
       </a>
    </nav>
+   <header><h1>Markdown For Content</h1></header>
+   <div id="markdown" tal:content="structure markdown" />
 </tal:block>
