--- a/public/css/everything.css
+++ b/public/css/everything.css
@@ -42,7 +42,8 @@ footer.foot a:hover {
 }
 #markdown {
    margin: 0 auto;
-   width: 100ex;
+   width: 90ex;
    text-align: justify;
    font-family: monospace;
+   font-size: 130%;
 }
